[tool.poetry]
name = "kle-fetch"
version = "0.1.0"
description = ""
authors = ["Matteo Campinoti <matteo.campinoti94@gmail.com>"]
license = "GPL-3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
xmltodict = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
