[tool.poetry]
name = "kle-fetch"
version = "0.1.0"
description = ""
authors = ["Matteo Campinoti <matteo.campinoti94@gmail.com>"]
license = "GPL-3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
xmltodict = "^0.13.0"


[tool.poetry.scripts]
kle-fetch = "kle_fetch.__main__:__main__"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
